# game-genre.games

./: Cargo.toml  LICENSE  README.md
src/: main.rs  routes.rs
