[package]
name = "super-secret-girl-project-uwu"
version = "0.1.0"
authors = ["krista-chan <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
reqwest = { version = "0.9.24" }
steam-auth = { version = "1.0.0", features = ["reqwest-09x"] }
dotenv = "0.15.0"
serde_urlencoded = "0.7.0"
json = "0.12.4"